<resources>
    <string name="app_name">Ejoytv</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Live Tv</string>
    <string name="tab_text_3">Radio 24x7</string>
    <string name="tab_text_4">Tv 24x7</string>
    <string name="tab_text_5">Concert</string>
    <string name="tab_text_6">Music</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fv">FEATURED VIDEOS</string>
</resources>

